--- a/404.md
+++ b/404.md
@@ -3,5 +3,7 @@ layout: default
 permalink: /404.html
 ---
 
-# 404
-Page not found :(
+# Error 404
+Sorry! There's no page here.
+
+Want to <a href="/">go back home</a>?
